--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .App {
-    margin: 0rem !important;
+    margin: 0rem;
     background-image: url('/public/bg.png');
     background-position: center; 
     background-repeat: no-repeat; 
@@ -8,4 +8,6 @@
     justify-content: center;
     align-items: start;
     height: calc(100vh - 4rem);
+    overflow: auto;
+    padding: 3rem;
 }
