--- a/src/styles/Signin.style.css
+++ b/src/styles/Signin.style.css
@@ -12,8 +12,7 @@
 }
 .Signin h1 {
     color: #fff;
-    text-align: center;
-    font-size: 3.5rem;
+    font-size: 4rem;
     margin-top: .6rem;
     margin-bottom: 1rem;
 }
@@ -24,7 +23,7 @@
     justify-content: center;
     align-items: flex-start;
     text-align: start;
-    row-gap: .8rem;
+    row-gap: 1rem;
 }
 
 .Signin .form button {
