changing navbar links font size

--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -67,8 +67,9 @@ nav {
     color: #a2a2a1;
     text-decoration: none;
     margin: 0 1rem;
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 500;
+    padding: .6rem;
 }
 .mobileLinks a:active{
     color: #1976d2;
