--- a/src/styles/Register.style.css
+++ b/src/styles/Register.style.css
@@ -41,7 +41,7 @@
     .Register h1 {
         color: #fff;
         text-align: center;
-        font-size: 3.5rem;
+        font-size: 3rem;
         margin-top: .6rem;
         margin-bottom: 1rem;
     }
@@ -51,18 +51,22 @@
         width: 100%;
         text-align: start;
         row-gap: .8rem;
-
     }
-
+    
     .Register .form label {
+        font-size: 1rem;
         align-self: flex-start;
     }
 
     .Register .form button {
         margin-top: 1.5rem;
+        font-size: 1.3rem;
     }
     .Register .form input {
-        width: 100%;
+        width: 95%;
+    }
+    .Register .form input::placeholder {
+        font-size: 1.2rem;
     }
     .Register-Wrapper img {
         display: none;
