--- a/src/components/form/PrimaryButton.styles.css
+++ b/src/components/form/PrimaryButton.styles.css
@@ -1,4 +1,4 @@
-.primary-btn button {
+.primary-btn {
     background-color: #f1216c;
     border: none;
     color: white;
@@ -11,11 +11,11 @@
     cursor: pointer;
 }
 
-.primary-btn button:hover {
+.primary-btn:hover {
     background-color: #be1a55;
     transition: ease-in-out .2s;
 }
 
-.primary-btn button:active {
+.primary-btn:active {
     background-color: #710f32;
 }
