--- a/src/styles/Layout.styles.css
+++ b/src/styles/Layout.styles.css
@@ -3,5 +3,5 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    justify-content: start;
+    justify-content: flex-start;
 }
