--- a/src/styles/Start.styles.css
+++ b/src/styles/Start.styles.css
@@ -4,7 +4,7 @@
 
 }
 
-.Begin {
+.Start {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -40,7 +40,7 @@
 }
 
 @media (max-width: 1023px) {
-    .Begin {
+    .Start {
         display: flex;
         flex-direction: column;
         align-items: center;
